footer contrast fixed

--- a/skylar.css
+++ b/skylar.css
@@ -114,3 +114,7 @@ h1 {
     color: white;
     text-decoration: none;
 }
+
+.footer-content p {
+    color:white;
+}
